gh_1.20 : fixed padding space on mobile for project pages

--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@
          display: block;
          width:100%!important;
          padding: 0px;
-         margin-top: 40px;
+         margin-top: 20px;
     }
      .mobile-custom-font {
          font-size: 11px;
